# Computer-club

./: CMakeLists.txt  README.md
data/: test_file_2.txt
include/: GameClub.h  global.h  timeUtils.h
src/: GameClub.cpp  main.cpp  timeUtils.cpp
src/tests/: test_gameClub.cpp  test_timeUtils.cpp
tests/: test_timeUtils.cpp
